gnome_module = import('gnome')

resources = gnome_module.compile_resources('org.gnome.LibGamepad',
                                           'org.gnome.LibGamepad.gresource.xml',
                                           source_dir: '.',
                                           c_name: 'resources')
